src/components/Category/Category.module.css
.section {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 20px;
  padding: 1rem;
  max-height: calc(100vh - 88px);
  overflow-y: scroll;
  scrollbar-color: var(--primary) var(--gray);
  position: relative;
  z-index: 0;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  background-color: var(--gray);
  color: black;
  box-shadow: 2.8px 2.8px 10px rgba(0, 0, 0, 0.775);
  transition: transform 300ms ease, box-shadow 1000ms ease;
  cursor: pointer;
}

.card:hover {
  transform: scale(1.01);
  box-shadow: 0px 0px 5px 10px var(--gray);
}

.imageContainer {
  position: relative;
  width: 100%;
}

.imageContainer > .backGround {
  position: absolute;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  z-index: 1;
  opacity: 0.5;
  filter: blur(2px);
}

.imageContainer > img {
  width: 100%;
  height: 410px;
  position: relative;
  z-index: 2;
  object-fit: contain;
}

.textContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1rem 0;
  gap: 10px;
}

.textContainer > h3 {
  font-size: 1.3rem;
  font-weight: 500;
  text-shadow: 0 0 2px rgba(0, 0, 0, 0.775);
  min-height: 45px;
}

.textContainer > div {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  padding: 0.2rem 1rem;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.775);
  border-radius: 5px;
}

.textContainer button {
  background: var(--darkerGray);
  border: none;
  border-radius: 5px;
  padding: 0.4rem 0.8rem;
  font-weight: 600;
  cursor: pointer;
}

.textContainer button:hover {
  filter: brightness(1.2);
}

